base/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-client
  template:
    metadata:
      labels:
        app: simple-client
    spec:
      containers:
      - name: simple-client
        image: 767791266862.dkr.ecr.ap-northeast-2.amazonaws.com/simple-client:0.1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "250m"
  strategy:
    blueGreen:
      activeService: simple-client-active
      previewService: simple-client-preview
      autoPromotionEnabled: true # 사용자 승인없이 교체 발생
