base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: simple-client-active
spec:
  selector:
    app: simple-client
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: simple-client-preview
spec:
  selector:
    app: simple-client
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
