base/bluegreen.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-client-active
            port:
              number: 80
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-client
  template:
    metadata:
      labels:
        app: simple-client
    spec:
      containers:
      - name: simple-client
        image: 767791266862.dkr.ecr.ap-northeast-2.amazonaws.com/simple-client:0.1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "250m"
          limits:
            memory: "250m"
  strategy:
    blueGreen:
      activeService: simple-client-active
      previewService: simple-client-preview
      autoPromotionEnabled: true # 사용자 승인없이 교체 발생
---
kind: Service
apiVersion: v1
metadata:
  name: simple-client-active
spec:
  selector:
    app: simple-client
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: simple-client-preview
spec:
  selector:
    app: simple-client
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: simple-client
# spec:
#   maxReplicas: 10
#   minReplicas: 3
#   scaleTargetRef:
#     apiVersion: argoproj.io/v1alpha1
#     kind: Rollout
#     name: simple-client
#   targetCPUUtilizationPercentage: 80
